# nextcore

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  TODO.md  pypi-README.md  pyproject.toml
.github/checkers/: pylint.json  pyright.json
.github/workflows/: lint.yaml  release.yaml  tests.yaml  upload_docs.yaml
docs/: api.rst  common.rst  conf.py  events.rst  gateway.rst  http.rst  index.rst  optimizing.rst  releasenotes.rst  serve_dev.py  typings.rst
docs/contributing/: getting_started.rst
examples/: README.md  ping_pong.py
examples/gateway/: ping_pong.py
examples/gateway/ping_pong/: ping_pong.py
examples/gateway/ping_pong_slash_command/: README.md  ping_pong_slash_command.py  register_commands.py
examples/http/: get_channel.py  get_gateway.py
examples/http/get_channel/: get_channel.py
examples/http/get_gateway/: get_gateway.py
newsfragments/: 169.feature.rst  251.bugfix  9.misc.rst
nextcore/: __init__.py  py.typed
nextcore/common/: __init__.py  dispatcher.py  errors.py  json.py  maybe_coro.py  test_json.py  test_maybe_coro.py  undefined.py
nextcore/common/errors/: __init__.py  times_per.py
nextcore/common/times_per/: __init__.py  priority_queue_container.py  times_per.py
nextcore/endpoint/: __init__.py  interactions.py
nextcore/endpoint/adapters/: abc.py  openapi.py
nextcore/endpoint/adapters/aiohttp/: adapter.py
nextcore/endpoint/adapters/fastapi/: adapter.py
nextcore/endpoint/adapters/fastapi/models/interactions/: error.py
nextcore/endpoint/interactions/: __init__.py  controller.py  errors.py  interaction.py  primitives.py  request.py  request_verifier.py  response.py
nextcore/gateway/: __init__.py  close_code.py  decompressor.py  dispatcher.py  errors.py  exponential_backoff.py  gateway.py  old_shard.py  op_code.py  opcodes.py  shard.py  shard_manager.py  times_per.py
nextcore/http/: __init__.py  bucket.py  bucket_metadata.py  client.py  errors.py  file.py  flood_gate.py  global_lock.py  pop_event.py  rate_limit_storage.py  ratelimit_storage.py  request_session.py  reverse_event.py  reverse_lock.py  route.py
nextcore/http/authentication/: __init__.py  base.py  bearer.py  bot.py
nextcore/http/client/: __init__.py  abstract_client.py  base_client.py  client.py  client.py.32831451bac92c24b4d15a049f2c17b6.tmp  client_response.py
nextcore/http/client/wrappers/: __init__.py  application_commands.py  audit_log.py  automod.py  channel.py  emoji.py  gateway.py  guild.py  guild_scheduled_events.py  guild_template.py  invite.py  oauth2.py  stage_instance.py  sticker.py  user.py  voice.py  webhook.py
nextcore/http/global_rate_limiter/: __init__.py  base.py  limited.py  priority_request_container.py  unlimited.py
nextcore/typings/: __init__.py
nextcore/typings/application/: __init__.py  application.py  install_params.py
nextcore/typings/audit_log/: __init__.py  audit_log.py  audit_log_change.py  audit_log_change_key.py  audit_log_entry.py  audit_log_event.py  optional_audit_entry_info.py
nextcore/typings/channel/: __init__.py  channel.py  channel_type.py  overwrite.py  video_quality_mode.py
nextcore/typings/channel/thread/: __init__.py  auto_archive_duration.py  thread_member.py  thread_metadata.py
nextcore/typings/common/: __init__.py  locale.py  snowflake.py
nextcore/typings/emoji/: __init__.py  emoji.py
nextcore/typings/gateway/: __init__.py  outer.py
nextcore/typings/gateway/inner/: __init__.py  hello.py
nextcore/typings/gateway/inner/dispatch/: __init__.py  ready.py  resumed.py
nextcore/typings/guild/: __init__.py  default_message_notification_level.py  explicit_content_filter_level.py  guild.py  guild_feature.py  guild_member.py  guild_nsfw_level.py  guild_preview.py  mfa_level.py  premium_tier.py  unavailable_guild.py  verification_level.py
nextcore/typings/guild/role/: __init__.py  role.py  role_tags.py
nextcore/typings/http/: __init__.py  error.py  get_gateway.py  get_gateway_bot.py  json_error.py
nextcore/typings/objects/: __init__.py  activity.py  activity_assets.py  activity_button.py  activity_party.py  activity_secrets.py  activity_timestamps.py  activity_type.py  auto_archive_duration.py  channel.py  channel_type.py  emoji.py  explicit_content_filter_level.py  game_activity.py  guild.py  guild_feature.py  guild_scheduled_event.py  locale.py  member.py  message_notifications_level.py  mfa_level.py  permission_overwrite.py  permission_overwrite_type.py  role.py  role_tags.py  session_start_limit.py  status_type.py  thread_member.py  thread_metadata.py  unavailable_guild.py  update_presence.py  user.py  verification_level.py  video_quality_mode.py  voice_state.py
nextcore/typings/team/: __init__.py  membership_state.py  team.py  team_member.py  team_permission.py
nextcore/utils/: __init__.py  asyncio_utils.py  extract_token_info.py  json.py  time_utils.py
nextcore/voice/: opcodes.py  udp_client.py  voice_client.py
tests/: license_header.txt  test_common_mistakes.py  test_license.py  test_utils.py  utils.py
tests/common/: test_dispatcher.py  test_json.py  test_times_per.py
tests/endpoint/interactions/: test_request_verifier.py
tests/gateway/: test_decompressor.py  test_dispatcher.py  test_exponential_backoff.py  test_times_per.py
tests/http/: test_bucket.py  test_buckets.py  test_file.py  test_flood_gate.py  test_global_lock.py  test_ratelimit_storage.py  test_route.py
tests/http/global_rate_limiter/: test_limited.py  test_unlimited.py
tests/integration/: test_discord_api.py
