[tool.poetry]
name = "nextcore"
version = "1.0.0a"
description = "A minimal gateway and http handler for discord bot libraries"
authors = ["Nextcore developers"]
license = "MIT"

packages = [
    { include = "nextcore" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.6.0,<4.0.0"
frozendict = "^2.3.0"
types-frozendict = "^2.0.6" # Could we extend the version requirement
typing-extensions = "^4.1.1" # Same as above
orjson = {version = "^3.6.8", optional = true}
types-orjson = {version = "^3.6.2", optional = true}
discord-typings = "^0.4.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx-copybutton = "^0.4.0"
furo = "^2022.1.2"
isort = "^5.10.1"
black = "^21.12b0"
pytest = "^6.2.5"
taskipy = "^1.9.0"
pytest-asyncio = "^0.18.1"
pytest-mock = "^3.7.0"
click = "8.0.4"
pre-commit = "^2.18.1"
sphinxext-opengraph = "^0.6.3"
slotscheck = "^0.14.0"

[tool.poetry.extras]
speed = ["orjson", "types-orjson"]

[tool.taskipy.tasks]
black_check = "black . --diff --check"
isort_check = "isort . --check --diff"
tests = "pytest"
black = "black ."
isort = "isort ."
lint = "black . && isort ."

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.pyright]
pythonPlatform = "All"
typeCheckingMode = "strict"
pythonVersion = "3.8"
exclude = ["tests/"]

[tool.mypy]
python_version = "3.8"
strict = true
exclude = ["tests/"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
