[tool.poetry]
name = "nextcore"
version = "2.0.2"
description = "A low level Discord API wrapper"
authors = ["tag-epic"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
readme = "pypi-README.md"
#homepage = "https://nextcord.dev" # TODO: Replace this?
repository = "https://github.com/nextsnake/nextcore"
documentation = "https://nextcore.readthedocs.io"
keywords = ["discord", "bot", "wrapper", "api"]
packages = [
    { include = "nextcore" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nextsnake/nextcore/issues"
"Discord" = "https://discord.gg/3RFUm3eP5c"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.6.0,<4.0.0"
frozendict = "^2.3.0"
types-frozendict = "^2.0.6" # Could we extend the version requirement
typing-extensions = "^4.1.1" # Same as above
orjson = {version = "^3.6.8", optional = true}
types-orjson = {version = "^3.6.2", optional = true}
discord-typings = "^0.5.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.0.0"
sphinx-copybutton = "^0.4.0"
furo = "*" # CalVer, the version does not make sense to lock.
isort = "^5.10.1"
black = "^22.6.0"
pytest = "^6.2.5"
taskipy = "^1.9.0"
pytest-asyncio = "^0.18.1"
pytest-mock = "^3.7.0"
pre-commit = "^2.18.1"
sphinxext-opengraph = "^0.6.3"
slotscheck = "^0.14.0"
sphinx-inline-tabs = "*" # CalVer, the version does not make sense to lock.
towncrier = "^22.12.0"
style-guide = {git = "https://github.com/nextsnake/style-guide"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
speed = ["orjson", "types-orjson"]

# Tools
[tool.taskipy.tasks]
black_check = "black . --diff --check"
isort_check = "isort . --check --diff"
tests = "pytest"
black = "black ."
isort = "isort ."
lint = "black . && isort ."

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.pyright]
pythonPlatform = "All"
typeCheckingMode = "strict"
pythonVersion = "3.8"
exclude = ["tests/"]

[tool.towncrier]
package = "nextcore"
filename = "docs/releasenotes.rst"
directory = "newsfragments/"
